Fixwd width in .wrap-grid and upgrade in mediaQuerys

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -167,6 +167,7 @@ body {
   flex-direction: column;
   width: 100%;
   max-width: 350px;
+  min-width: 350px;
   height: 100%;
   border-radius: var(--border-radius);
   background-color: #fafafa;
@@ -1112,7 +1113,13 @@ body {
 }
 
 /*------ Media Query for 1200px ------*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -1139,7 +1146,13 @@ body {
 }
 
 /* Large devices (laptops/desktops, 1200px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 750px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 2rem;
+    --heading-height: 4em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -1149,7 +1162,29 @@ body {
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 770px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
+  .box-marked {
+    visibility: hidden;
+  }
+  .wrapper-section-grid {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1050px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -1159,9 +1194,15 @@ body {
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1450px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1400px;
+    --h1-font-size: 3rem;
+    --heading-height: 5em;
+  }
   .box-marked {
-    visibility: hidden;
+    visibility: visible;
   }
   .wrapper-section-grid {
     -ms-grid-columns: (1fr)[4];
@@ -1169,7 +1210,13 @@ body {
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1850px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1700px;
+    --h1-font-size: 3rem;
+    --heading-height: 5em;
+  }
   .box-marked {
     visibility: visible;
   }
