--- a/src/sass/components/_mediaQuery.scss
+++ b/src/sass/components/_mediaQuery.scss
@@ -1,10 +1,10 @@
-@media only screen and (max-width: 600px) {
-  // :root {
-  //   /*--- Sizes variables ---*/
-  //   --big-max-width: 700px;
-  //   --h1-font-size: 1.75rem;
-  //   --heading-height: 3em;
-  // }
+@media only screen and (max-width: 750px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -21,13 +21,13 @@
 }
 /* Large devices (laptops/desktops, 1200px and up) */
 
-@media only screen and (min-width: 600px) {
-  // :root {
-  //   /*--- Sizes variables ---*/
-  //   --big-max-width: 300px;
-  //   --h1-font-size: 1rem;
-  //   --heading-height: 4em;
-  // }
+@media only screen and (min-width: 750px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 2rem;
+    --heading-height: 4em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -36,13 +36,28 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
-  // :root {
-  //   /*--- Sizes variables ---*/
-  //   --big-max-width: 700px;
-  //   --h1-font-size: 1.75rem;
-  //   --heading-height: 3em;
-  // }
+@media only screen and (min-width: 770px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 700px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
+  .box-marked {
+    visibility: hidden;
+  }
+  .wrapper-section-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1050px;
+    --h1-font-size: 1.75rem;
+    --heading-height: 3em;
+  }
   .box-marked {
     visibility: hidden;
   }
@@ -51,16 +66,30 @@
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1450px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1400px;
+    --h1-font-size: 3rem;
+    --heading-height: 5em;
+  }
+
   .box-marked {
-    visibility: hidden;
+    visibility: visible;
   }
   .wrapper-section-grid {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1850px) {
+  :root {
+    /*--- Sizes variables ---*/
+    --big-max-width: 1700px;
+    --h1-font-size: 3rem;
+    --heading-height: 5em;
+  }
+
   .box-marked {
     visibility: visible;
   }
